[package]
name = "matrix-url-previewer-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
color-eyre = "0.6.5"
deadpool-sqlite = { version = "*", features = ["tracing"] }
eyre = "0.6.12"
indexmap = "2.9.0"
matrix-sdk = { version = "0.11.0", default-features = false, features = ["automatic-room-key-forwarding", "e2e-encryption", "eyre", "socks", "sqlite"] }
matrixbot-ezlogin = { version = "0.3.3", default-features = false }
nom = "8.0.0"
regex = "1.11.1"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
static-toml = "1.3.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"

[features]
default = ["native-tls"]
bundled-sqlite = ["matrix-sdk/bundled-sqlite", "matrixbot-ezlogin/bundled-sqlite"]
native-tls = ["matrix-sdk/native-tls", "matrixbot-ezlogin/native-tls"]
rustls-tls = ["matrix-sdk/rustls-tls", "matrixbot-ezlogin/rustls-tls"]
